; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_mscc.c_vsc85xx_tr_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_mscc.c_vsc85xx_tr_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }

@MSCC_PHY_TR_MSB = common dso_local global i32 0, align 4
@MSCC_PHY_TR_LSB = common dso_local global i32 0, align 4
@MSCC_PHY_TR_CNTL = common dso_local global i32 0, align 4
@TR_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.phy_device*, i32, i32)* @vsc85xx_tr_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vsc85xx_tr_write(%struct.phy_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.phy_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %8 = load i32, i32* @MSCC_PHY_TR_MSB, align 4
  %9 = load i32, i32* %6, align 4
  %10 = ashr i32 %9, 16
  %11 = call i32 @__phy_write(%struct.phy_device* %7, i32 %8, i32 %10)
  %12 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %13 = load i32, i32* @MSCC_PHY_TR_LSB, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @GENMASK(i32 15, i32 0)
  %16 = and i32 %14, %15
  %17 = call i32 @__phy_write(%struct.phy_device* %12, i32 %13, i32 %16)
  %18 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %19 = load i32, i32* @MSCC_PHY_TR_CNTL, align 4
  %20 = load i32, i32* @TR_WRITE, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @TR_ADDR(i32 %21)
  %23 = or i32 %20, %22
  %24 = call i32 @__phy_write(%struct.phy_device* %18, i32 %19, i32 %23)
  ret void
}

declare dso_local i32 @__phy_write(%struct.phy_device*, i32, i32) #1

declare dso_local i32 @GENMASK(i32, i32) #1

declare dso_local i32 @TR_ADDR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
